--- a/StudentIO/StudentIO.csproj
+++ b/StudentIO/StudentIO.csproj
@@ -228,6 +228,7 @@
       <DependentUpon>StudentIO.edmx</DependentUpon>
       <LastGenOutput>StudentIO.cs</LastGenOutput>
     </Content>
+    <Resource Include="Resources\search.png" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\AdmissionIcon.ico" />
