--- a/StudentIO/StudentIO.csproj
+++ b/StudentIO/StudentIO.csproj
@@ -75,49 +75,49 @@
     </Compile>
     <Compile Include="Classes\Navigation.cs" />
     <Compile Include="DataBase\AdmissionControlNumber.cs">
-      <DependentUpon>StudentIO.tt</DependentUpon>
+      <DependentUpon>StudentIO1.tt</DependentUpon>
     </Compile>
     <Compile Include="DataBase\Employee.cs">
-      <DependentUpon>StudentIO.tt</DependentUpon>
+      <DependentUpon>StudentIO1.tt</DependentUpon>
     </Compile>
     <Compile Include="DataBase\Enrollee.cs">
-      <DependentUpon>StudentIO.tt</DependentUpon>
+      <DependentUpon>StudentIO1.tt</DependentUpon>
     </Compile>
     <Compile Include="DataBase\EnrolleeDocument.cs">
-      <DependentUpon>StudentIO.tt</DependentUpon>
+      <DependentUpon>StudentIO1.tt</DependentUpon>
     </Compile>
     <Compile Include="DataBase\EnrolleeEntranceTest.cs">
-      <DependentUpon>StudentIO.tt</DependentUpon>
+      <DependentUpon>StudentIO1.tt</DependentUpon>
     </Compile>
     <Compile Include="DataBase\EntranceTest.cs">
-      <DependentUpon>StudentIO.tt</DependentUpon>
+      <DependentUpon>StudentIO1.tt</DependentUpon>
     </Compile>
     <Compile Include="DataBase\FormOfEducation.cs">
-      <DependentUpon>StudentIO.tt</DependentUpon>
+      <DependentUpon>StudentIO1.tt</DependentUpon>
     </Compile>
     <Compile Include="DataBase\Group.cs">
-      <DependentUpon>StudentIO.tt</DependentUpon>
+      <DependentUpon>StudentIO1.tt</DependentUpon>
     </Compile>
     <Compile Include="DataBase\Nationality.cs">
-      <DependentUpon>StudentIO.tt</DependentUpon>
+      <DependentUpon>StudentIO1.tt</DependentUpon>
     </Compile>
     <Compile Include="DataBase\OrderOfAdmission.cs">
-      <DependentUpon>StudentIO.tt</DependentUpon>
+      <DependentUpon>StudentIO1.tt</DependentUpon>
     </Compile>
     <Compile Include="DataBase\PersonalStudentFile.cs">
-      <DependentUpon>StudentIO.tt</DependentUpon>
+      <DependentUpon>StudentIO1.tt</DependentUpon>
     </Compile>
     <Compile Include="DataBase\SelectionCampaign.cs">
-      <DependentUpon>StudentIO.tt</DependentUpon>
+      <DependentUpon>StudentIO1.tt</DependentUpon>
     </Compile>
     <Compile Include="DataBase\Speciality.cs">
-      <DependentUpon>StudentIO.tt</DependentUpon>
+      <DependentUpon>StudentIO1.tt</DependentUpon>
     </Compile>
     <Compile Include="DataBase\StartEducation.cs">
-      <DependentUpon>StudentIO.tt</DependentUpon>
+      <DependentUpon>StudentIO1.tt</DependentUpon>
     </Compile>
     <Compile Include="DataBase\Statement.cs">
-      <DependentUpon>StudentIO.tt</DependentUpon>
+      <DependentUpon>StudentIO1.tt</DependentUpon>
     </Compile>
     <Compile Include="DataBase\StudentIO.Context.cs">
       <AutoGen>True</AutoGen>
@@ -134,11 +134,26 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>StudentIO.edmx</DependentUpon>
     </Compile>
+    <Compile Include="DataBase\StudentIO1.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>StudentIO1.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DataBase\StudentIO1.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>StudentIO1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DataBase\StudentIO1.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>StudentIO1.edmx</DependentUpon>
+    </Compile>
     <Compile Include="DataBase\Subject.cs">
-      <DependentUpon>StudentIO.tt</DependentUpon>
+      <DependentUpon>StudentIO1.tt</DependentUpon>
     </Compile>
     <Compile Include="DataBase\SubjectOfEntranceTest.cs">
-      <DependentUpon>StudentIO.tt</DependentUpon>
+      <DependentUpon>StudentIO1.tt</DependentUpon>
     </Compile>
     <Compile Include="DataBase\sysdiagrams.cs">
       <DependentUpon>StudentIO.tt</DependentUpon>
@@ -163,7 +178,15 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Pages\OrganisationPages\AddAndRedactSpecialityPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Pages\OrganisationPages\EmployeesPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\OrganisationPages\SpecialitiesPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -181,8 +204,14 @@
     <Compile Include="Pages\OrganisationPages\AddAndRedactPage.xaml.cs">
       <DependentUpon>AddAndRedactPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Pages\OrganisationPages\AddAndRedactSpecialityPage.xaml.cs">
+      <DependentUpon>AddAndRedactSpecialityPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Pages\OrganisationPages\EmployeesPage.xaml.cs">
       <DependentUpon>EmployeesPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\OrganisationPages\SpecialitiesPage.xaml.cs">
+      <DependentUpon>SpecialitiesPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
@@ -208,6 +237,13 @@
     <None Include="DataBase\StudentIO.edmx.diagram">
       <DependentUpon>StudentIO.edmx</DependentUpon>
     </None>
+    <EntityDeploy Include="DataBase\StudentIO1.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>StudentIO1.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="DataBase\StudentIO1.edmx.diagram">
+      <DependentUpon>StudentIO1.edmx</DependentUpon>
+    </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -228,6 +264,18 @@
       <DependentUpon>StudentIO.edmx</DependentUpon>
       <LastGenOutput>StudentIO.cs</LastGenOutput>
     </Content>
+    <Content Include="DataBase\StudentIO1.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>StudentIO1.edmx</DependentUpon>
+      <LastGenOutput>StudentIO1.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="DataBase\StudentIO1.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>StudentIO1.edmx</DependentUpon>
+      <LastGenOutput>StudentIO1.cs</LastGenOutput>
+    </Content>
+    <Resource Include="Resources\edit.png" />
+    <Resource Include="Resources\view.png" />
     <Resource Include="Resources\arrow.png" />
     <Resource Include="Resources\search.png" />
   </ItemGroup>
