--- a/StudentIO/StudentIO.csproj
+++ b/StudentIO/StudentIO.csproj
@@ -75,49 +75,49 @@
     </Compile>
     <Compile Include="Classes\Navigation.cs" />
     <Compile Include="DataBase\AdmissionControlNumber.cs">
-      <DependentUpon>StudentIO1.tt</DependentUpon>
+      <DependentUpon>StudentIO.tt</DependentUpon>
     </Compile>
     <Compile Include="DataBase\Employee.cs">
-      <DependentUpon>StudentIO1.tt</DependentUpon>
+      <DependentUpon>StudentIO.tt</DependentUpon>
     </Compile>
     <Compile Include="DataBase\Enrollee.cs">
-      <DependentUpon>StudentIO1.tt</DependentUpon>
+      <DependentUpon>StudentIO.tt</DependentUpon>
     </Compile>
     <Compile Include="DataBase\EnrolleeDocument.cs">
-      <DependentUpon>StudentIO1.tt</DependentUpon>
+      <DependentUpon>StudentIO.tt</DependentUpon>
     </Compile>
     <Compile Include="DataBase\EnrolleeEntranceTest.cs">
-      <DependentUpon>StudentIO1.tt</DependentUpon>
+      <DependentUpon>StudentIO.tt</DependentUpon>
     </Compile>
     <Compile Include="DataBase\EntranceTest.cs">
-      <DependentUpon>StudentIO1.tt</DependentUpon>
+      <DependentUpon>StudentIO.tt</DependentUpon>
     </Compile>
     <Compile Include="DataBase\FormOfEducation.cs">
-      <DependentUpon>StudentIO1.tt</DependentUpon>
+      <DependentUpon>StudentIO.tt</DependentUpon>
     </Compile>
     <Compile Include="DataBase\Group.cs">
-      <DependentUpon>StudentIO1.tt</DependentUpon>
+      <DependentUpon>StudentIO.tt</DependentUpon>
     </Compile>
     <Compile Include="DataBase\Nationality.cs">
-      <DependentUpon>StudentIO1.tt</DependentUpon>
+      <DependentUpon>StudentIO.tt</DependentUpon>
     </Compile>
     <Compile Include="DataBase\OrderOfAdmission.cs">
-      <DependentUpon>StudentIO1.tt</DependentUpon>
+      <DependentUpon>StudentIO.tt</DependentUpon>
     </Compile>
     <Compile Include="DataBase\PersonalStudentFile.cs">
-      <DependentUpon>StudentIO1.tt</DependentUpon>
+      <DependentUpon>StudentIO.tt</DependentUpon>
     </Compile>
     <Compile Include="DataBase\SelectionCampaign.cs">
-      <DependentUpon>StudentIO1.tt</DependentUpon>
+      <DependentUpon>StudentIO.tt</DependentUpon>
     </Compile>
     <Compile Include="DataBase\Speciality.cs">
-      <DependentUpon>StudentIO1.tt</DependentUpon>
+      <DependentUpon>StudentIO.tt</DependentUpon>
     </Compile>
     <Compile Include="DataBase\StartEducation.cs">
-      <DependentUpon>StudentIO1.tt</DependentUpon>
+      <DependentUpon>StudentIO.tt</DependentUpon>
     </Compile>
     <Compile Include="DataBase\Statement.cs">
-      <DependentUpon>StudentIO1.tt</DependentUpon>
+      <DependentUpon>StudentIO.tt</DependentUpon>
     </Compile>
     <Compile Include="DataBase\StudentIO.Context.cs">
       <AutoGen>True</AutoGen>
@@ -150,10 +150,10 @@
       <DependentUpon>StudentIO1.edmx</DependentUpon>
     </Compile>
     <Compile Include="DataBase\Subject.cs">
-      <DependentUpon>StudentIO1.tt</DependentUpon>
+      <DependentUpon>StudentIO.tt</DependentUpon>
     </Compile>
     <Compile Include="DataBase\SubjectOfEntranceTest.cs">
-      <DependentUpon>StudentIO1.tt</DependentUpon>
+      <DependentUpon>StudentIO.tt</DependentUpon>
     </Compile>
     <Compile Include="DataBase\sysdiagrams.cs">
       <DependentUpon>StudentIO.tt</DependentUpon>
@@ -190,6 +190,18 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Pages\SelectionCampain.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\SelectionCampaingPages\OrderOfAdmissionPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\SelectionCampaingPages\SelectionCampaings.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Pages\AuthPage.xaml.cs">
@@ -212,6 +224,15 @@
     </Compile>
     <Compile Include="Pages\OrganisationPages\SpecialitiesPage.xaml.cs">
       <DependentUpon>SpecialitiesPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\SelectionCampain.xaml.cs">
+      <DependentUpon>SelectionCampain.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\SelectionCampaingPages\OrderOfAdmissionPage.xaml.cs">
+      <DependentUpon>OrderOfAdmissionPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\SelectionCampaingPages\SelectionCampaings.xaml.cs">
+      <DependentUpon>SelectionCampaings.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
@@ -288,5 +309,6 @@
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
