--- a/StudentIO/StudentIO.csproj
+++ b/StudentIO/StudentIO.csproj
@@ -75,49 +75,49 @@
     </Compile>
     <Compile Include="Classes\Navigation.cs" />
     <Compile Include="DataBase\AdmissionControlNumber.cs">
-      <DependentUpon>StudentIO1.tt</DependentUpon>
+      <DependentUpon>StudentIO.tt</DependentUpon>
     </Compile>
     <Compile Include="DataBase\Employee.cs">
-      <DependentUpon>StudentIO1.tt</DependentUpon>
+      <DependentUpon>StudentIO.tt</DependentUpon>
     </Compile>
     <Compile Include="DataBase\Enrollee.cs">
-      <DependentUpon>StudentIO1.tt</DependentUpon>
+      <DependentUpon>StudentIO.tt</DependentUpon>
     </Compile>
     <Compile Include="DataBase\EnrolleeDocument.cs">
-      <DependentUpon>StudentIO1.tt</DependentUpon>
+      <DependentUpon>StudentIO.tt</DependentUpon>
     </Compile>
     <Compile Include="DataBase\EnrolleeEntranceTest.cs">
-      <DependentUpon>StudentIO1.tt</DependentUpon>
+      <DependentUpon>StudentIO.tt</DependentUpon>
     </Compile>
     <Compile Include="DataBase\EntranceTest.cs">
-      <DependentUpon>StudentIO1.tt</DependentUpon>
+      <DependentUpon>StudentIO.tt</DependentUpon>
     </Compile>
     <Compile Include="DataBase\FormOfEducation.cs">
-      <DependentUpon>StudentIO1.tt</DependentUpon>
+      <DependentUpon>StudentIO.tt</DependentUpon>
     </Compile>
     <Compile Include="DataBase\Group.cs">
-      <DependentUpon>StudentIO1.tt</DependentUpon>
+      <DependentUpon>StudentIO.tt</DependentUpon>
     </Compile>
     <Compile Include="DataBase\Nationality.cs">
-      <DependentUpon>StudentIO1.tt</DependentUpon>
+      <DependentUpon>StudentIO.tt</DependentUpon>
     </Compile>
     <Compile Include="DataBase\OrderOfAdmission.cs">
-      <DependentUpon>StudentIO1.tt</DependentUpon>
+      <DependentUpon>StudentIO.tt</DependentUpon>
     </Compile>
     <Compile Include="DataBase\PersonalStudentFile.cs">
-      <DependentUpon>StudentIO1.tt</DependentUpon>
+      <DependentUpon>StudentIO.tt</DependentUpon>
     </Compile>
     <Compile Include="DataBase\SelectionCampaign.cs">
-      <DependentUpon>StudentIO1.tt</DependentUpon>
+      <DependentUpon>StudentIO.tt</DependentUpon>
     </Compile>
     <Compile Include="DataBase\Speciality.cs">
-      <DependentUpon>StudentIO1.tt</DependentUpon>
+      <DependentUpon>StudentIO.tt</DependentUpon>
     </Compile>
     <Compile Include="DataBase\StartEducation.cs">
-      <DependentUpon>StudentIO1.tt</DependentUpon>
+      <DependentUpon>StudentIO.tt</DependentUpon>
     </Compile>
     <Compile Include="DataBase\Statement.cs">
-      <DependentUpon>StudentIO1.tt</DependentUpon>
+      <DependentUpon>StudentIO.tt</DependentUpon>
     </Compile>
     <Compile Include="DataBase\StudentIO.Context.cs">
       <AutoGen>True</AutoGen>
@@ -150,10 +150,10 @@
       <DependentUpon>StudentIO1.edmx</DependentUpon>
     </Compile>
     <Compile Include="DataBase\Subject.cs">
-      <DependentUpon>StudentIO1.tt</DependentUpon>
+      <DependentUpon>StudentIO.tt</DependentUpon>
     </Compile>
     <Compile Include="DataBase\SubjectOfEntranceTest.cs">
-      <DependentUpon>StudentIO1.tt</DependentUpon>
+      <DependentUpon>StudentIO.tt</DependentUpon>
     </Compile>
     <Compile Include="DataBase\sysdiagrams.cs">
       <DependentUpon>StudentIO.tt</DependentUpon>
