--- a/StudentIO/App.config
+++ b/StudentIO/App.config
@@ -10,6 +10,7 @@
   <connectionStrings>
     <add name="StudentIOEntities" connectionString="metadata=res://*/DataBase.StudentIO.csdl|res://*/DataBase.StudentIO.ssdl|res://*/DataBase.StudentIO.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=AsuraG;initial catalog=StudentIO;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="StudentIOEntities1" connectionString="metadata=res://*/DataBase.StudentIO1.csdl|res://*/DataBase.StudentIO1.ssdl|res://*/DataBase.StudentIO1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-FEG84MA;initial catalog=StudentIO;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="StudentIOEntities2" connectionString="metadata=res://*/DataBase.StidentIO1.csdl|res://*/DataBase.StidentIO1.ssdl|res://*/DataBase.StidentIO1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-FEG84MA;initial catalog=StudentIO;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
