--- a/StudentIO/StudentIO.csproj
+++ b/StudentIO/StudentIO.csproj
@@ -75,89 +75,74 @@
     </Compile>
     <Compile Include="Classes\Navigation.cs" />
     <Compile Include="DataBase\AdmissionControlNumber.cs">
-      <DependentUpon>StudentIO.tt</DependentUpon>
+      <DependentUpon>StidentIO1.tt</DependentUpon>
     </Compile>
     <Compile Include="DataBase\Employee.cs">
-      <DependentUpon>StudentIO.tt</DependentUpon>
+      <DependentUpon>StidentIO1.tt</DependentUpon>
     </Compile>
     <Compile Include="DataBase\Enrollee.cs">
-      <DependentUpon>StudentIO.tt</DependentUpon>
+      <DependentUpon>StidentIO1.tt</DependentUpon>
     </Compile>
     <Compile Include="DataBase\EnrolleeDocument.cs">
-      <DependentUpon>StudentIO.tt</DependentUpon>
+      <DependentUpon>StidentIO1.tt</DependentUpon>
     </Compile>
     <Compile Include="DataBase\EnrolleeEntranceTest.cs">
-      <DependentUpon>StudentIO.tt</DependentUpon>
+      <DependentUpon>StidentIO1.tt</DependentUpon>
     </Compile>
     <Compile Include="DataBase\EntranceTest.cs">
-      <DependentUpon>StudentIO.tt</DependentUpon>
+      <DependentUpon>StidentIO1.tt</DependentUpon>
     </Compile>
     <Compile Include="DataBase\FormOfEducation.cs">
-      <DependentUpon>StudentIO.tt</DependentUpon>
+      <DependentUpon>StidentIO1.tt</DependentUpon>
     </Compile>
     <Compile Include="DataBase\Group.cs">
-      <DependentUpon>StudentIO.tt</DependentUpon>
+      <DependentUpon>StidentIO1.tt</DependentUpon>
     </Compile>
     <Compile Include="DataBase\Nationality.cs">
-      <DependentUpon>StudentIO.tt</DependentUpon>
+      <DependentUpon>StidentIO1.tt</DependentUpon>
     </Compile>
     <Compile Include="DataBase\OrderOfAdmission.cs">
-      <DependentUpon>StudentIO.tt</DependentUpon>
+      <DependentUpon>StidentIO1.tt</DependentUpon>
     </Compile>
     <Compile Include="DataBase\PartialSelectionCampaign.cs" />
     <Compile Include="DataBase\PersonalStudentFile.cs">
-      <DependentUpon>StudentIO.tt</DependentUpon>
+      <DependentUpon>StidentIO1.tt</DependentUpon>
     </Compile>
     <Compile Include="DataBase\SelectionCampaign.cs">
-      <DependentUpon>StudentIO.tt</DependentUpon>
+      <DependentUpon>StidentIO1.tt</DependentUpon>
     </Compile>
     <Compile Include="DataBase\Speciality.cs">
-      <DependentUpon>StudentIO.tt</DependentUpon>
+      <DependentUpon>StidentIO1.tt</DependentUpon>
     </Compile>
     <Compile Include="DataBase\StartEducation.cs">
-      <DependentUpon>StudentIO.tt</DependentUpon>
+      <DependentUpon>StidentIO1.tt</DependentUpon>
     </Compile>
     <Compile Include="DataBase\Statement.cs">
-      <DependentUpon>StudentIO.tt</DependentUpon>
+      <DependentUpon>StidentIO1.tt</DependentUpon>
     </Compile>
-    <Compile Include="DataBase\StudentIO.Context.cs">
+    <Compile Include="DataBase\StidentIO1.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>StudentIO.Context.tt</DependentUpon>
+      <DependentUpon>StidentIO1.Context.tt</DependentUpon>
     </Compile>
-    <Compile Include="DataBase\StudentIO.cs">
+    <Compile Include="DataBase\StidentIO1.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>StudentIO.tt</DependentUpon>
+      <DependentUpon>StidentIO1.tt</DependentUpon>
     </Compile>
-    <Compile Include="DataBase\StudentIO.Designer.cs">
+    <Compile Include="DataBase\StidentIO1.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>StudentIO.edmx</DependentUpon>
-    </Compile>
-    <Compile Include="DataBase\StudentIO1.Context.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>StudentIO1.Context.tt</DependentUpon>
-    </Compile>
-    <Compile Include="DataBase\StudentIO1.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>StudentIO1.tt</DependentUpon>
-    </Compile>
-    <Compile Include="DataBase\StudentIO1.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>StudentIO1.edmx</DependentUpon>
+      <DependentUpon>StidentIO1.edmx</DependentUpon>
     </Compile>
     <Compile Include="DataBase\Subject.cs">
-      <DependentUpon>StudentIO.tt</DependentUpon>
+      <DependentUpon>StidentIO1.tt</DependentUpon>
     </Compile>
     <Compile Include="DataBase\SubjectOfEntranceTest.cs">
-      <DependentUpon>StudentIO.tt</DependentUpon>
+      <DependentUpon>StidentIO1.tt</DependentUpon>
     </Compile>
     <Compile Include="DataBase\sysdiagrams.cs">
-      <DependentUpon>StudentIO.tt</DependentUpon>
+      <DependentUpon>StidentIO1.tt</DependentUpon>
     </Compile>
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
@@ -195,19 +180,23 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Pages\SelectionCampain.xaml">
+    <Page Include="Pages\SelectionCampaignPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Pages\SelectionCampaingPages\AddNewOrder.xaml">
+    <Page Include="Pages\SelectionCampaingPages\AddOrder.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Pages\SelectionCampaingPages\AddNewSelectionCampaingPage.xaml">
+    <Page Include="Pages\SelectionCampaingPages\AddSelectionCampaing.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Pages\SelectionCampaingPages\OrderOfAdmissionPage.xaml">
+    <Page Include="Pages\SelectionCampaingPages\ControlNumbers.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\SelectionCampaingPages\OrderOfAdmission.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -241,17 +230,20 @@
     <Compile Include="Pages\OrganisationPages\SpecialitiesPage.xaml.cs">
       <DependentUpon>SpecialitiesPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Pages\SelectionCampain.xaml.cs">
-      <DependentUpon>SelectionCampain.xaml</DependentUpon>
+    <Compile Include="Pages\SelectionCampaignPage.xaml.cs">
+      <DependentUpon>SelectionCampaignPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Pages\SelectionCampaingPages\AddNewOrder.xaml.cs">
-      <DependentUpon>AddNewOrder.xaml</DependentUpon>
+    <Compile Include="Pages\SelectionCampaingPages\AddOrder.xaml.cs">
+      <DependentUpon>AddOrder.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Pages\SelectionCampaingPages\AddNewSelectionCampaingPage.xaml.cs">
-      <DependentUpon>AddNewSelectionCampaingPage.xaml</DependentUpon>
+    <Compile Include="Pages\SelectionCampaingPages\AddSelectionCampaing.xaml.cs">
+      <DependentUpon>AddSelectionCampaing.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Pages\SelectionCampaingPages\OrderOfAdmissionPage.xaml.cs">
-      <DependentUpon>OrderOfAdmissionPage.xaml</DependentUpon>
+    <Compile Include="Pages\SelectionCampaingPages\ControlNumbers.xaml.cs">
+      <DependentUpon>ControlNumbers.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\SelectionCampaingPages\OrderOfAdmission.xaml.cs">
+      <DependentUpon>OrderOfAdmission.xaml</DependentUpon>
     </Compile>
     <Compile Include="Pages\SelectionCampaingPages\SelectionCampaings.xaml.cs">
       <DependentUpon>SelectionCampaings.xaml</DependentUpon>
@@ -273,19 +265,12 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <EntityDeploy Include="DataBase\StudentIO.edmx">
+    <EntityDeploy Include="DataBase\StidentIO1.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>StudentIO.Designer.cs</LastGenOutput>
+      <LastGenOutput>StidentIO1.Designer.cs</LastGenOutput>
     </EntityDeploy>
-    <None Include="DataBase\StudentIO.edmx.diagram">
-      <DependentUpon>StudentIO.edmx</DependentUpon>
-    </None>
-    <EntityDeploy Include="DataBase\StudentIO1.edmx">
-      <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>StudentIO1.Designer.cs</LastGenOutput>
-    </EntityDeploy>
-    <None Include="DataBase\StudentIO1.edmx.diagram">
-      <DependentUpon>StudentIO1.edmx</DependentUpon>
+    <None Include="DataBase\StidentIO1.edmx.diagram">
+      <DependentUpon>StidentIO1.edmx</DependentUpon>
     </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
@@ -297,26 +282,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="DataBase\StudentIO.Context.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>StudentIO.Context.cs</LastGenOutput>
-      <DependentUpon>StudentIO.edmx</DependentUpon>
-    </Content>
-    <Content Include="DataBase\StudentIO.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>StudentIO.edmx</DependentUpon>
-      <LastGenOutput>StudentIO.cs</LastGenOutput>
-    </Content>
-    <Content Include="DataBase\StudentIO1.Context.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>StudentIO1.edmx</DependentUpon>
-      <LastGenOutput>StudentIO1.Context.cs</LastGenOutput>
-    </Content>
-    <Content Include="DataBase\StudentIO1.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>StudentIO1.edmx</DependentUpon>
-      <LastGenOutput>StudentIO1.cs</LastGenOutput>
-    </Content>
+    <Resource Include="Resources\viewWhite.png" />
     <Resource Include="Resources\edit.png" />
     <Resource Include="Resources\view.png" />
     <Resource Include="Resources\arrow.png" />
@@ -331,6 +297,19 @@
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="DataBase\StidentIO1.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>StidentIO1.edmx</DependentUpon>
+      <LastGenOutput>StidentIO1.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="DataBase\StidentIO1.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>StidentIO1.edmx</DependentUpon>
+      <LastGenOutput>StidentIO1.cs</LastGenOutput>
+    </Content>
+    <Resource Include="Resources\editWhite.png" />
+    <Resource Include="Resources\checkBlue.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
